--- a/PP_2_3_1/pom.xml
+++ b/PP_2_3_1/pom.xml
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <version>${spring.version}</version>
+            <version>5.3.24</version>
         </dependency>
 
         <dependency>
