--- a/PP_2_3_1/src/main/resources/db.properties
+++ b/PP_2_3_1/src/main/resources/db.properties
@@ -1,6 +1,6 @@
 # MySQL properties
 db.driver = com.mysql.cj.jdbc.Driver
-db.url = jdbc:mysql://127.0.0.1:3306/my_db2?verifyServerCertificate=false&useSSL=false&requireSSL=false&useLegacyDatetimeCode=false&amp&serverTimezone=UTC
+db.url = jdbc:mysql://127.0.0.1:3306/my_db2
 db.username = bestuser
 db.password = bestuser
 
